[fix] hr_timesheet_sheet: overflow-y: auto !important; to avoid overlapping the chatter in the timesheet table view and make the table scollable again. Fix needed because some other addons are overwriting .table-responsive class globally to be y-overflow: unset

--- a/hr_timesheet_sheet/static/src/scss/backend.scss
+++ b/hr_timesheet_sheet/static/src/scss/backend.scss
@@ -17,3 +17,6 @@
         background-color: #f9f9f9 !important;
     }
 }
+.hr_timesheet_sheet_summary .o_field_x2many_2d_matrix .table-responsive {
+  overflow-y: auto !important;
+}
